syntax = "proto3";

option csharp_namespace = "MasterData.VM.Protos";
import "google/api/annotations.proto";

message ServiceTypeModel{
	string id = 1;
	string name = 2;
	string available_for = 3;
}

message resGetAll{
	repeated ServiceTypeModel listService = 1;
}

message reqGetByPool{
	string pool_id = 1;
}

message reqGetByPoolAndId{
	string pool_id = 1;
	string service_type_id = 2;
}

message ServiceTypeEmpty{string message = 1;}

// MasterData Vehicle Management ServiceType
service ServiceTypeGrpcService{
	// Create Service type 
	rpc Create(ServiceTypeModel) returns (ServiceTypeEmpty){
		option (google.api.http) = {
			post : "/v1/servicetype",
			body : "*"
		};
	}
	rpc Update(ServiceTypeModel) returns (ServiceTypeEmpty){
		option (google.api.http) = {
			put : "/v1/servicetype",
			body : "*"
		};
	}
	rpc GetById(reqGetByPoolAndId) returns (ServiceTypeModel){
		option (google.api.http) = {
			get : "/v1/servicetype/{pool_id}/{service_type_id}"
		};
	}
	rpc GetListService(reqGetByPool) returns (resGetAll){
		option (google.api.http) = {
			get : "/v1/servicetype/{pool_id}"
		};
	}
}